--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
 body{
-    max-width: 500px;
+  max-width: 500px;
   margin: auto;
-  background: white;
+  background: rgb(255, 255, 255);
   padding: 10px;
 } 
+
+ul{
+    color: white
+}
