--- a/index.css
+++ b/index.css
@@ -1,10 +1,48 @@
+ul{
+    color: white
+}
 body{
   max-width: 500px;
   margin: auto;
   background: rgb(255, 255, 255);
-  padding: 10px;
-} 
+  padding: 30px;
+  background-color:rgba(137, 158, 17, 0.842);
+  font-size: 16pt; 
+}
+h1,h2{
+  color: rgb(122, 58, 58);
+}
+strong{
+  font-family: Arial ;
+  color:rgba(255, 174, 0, 0.877)
+}
 
-ul{
-    color: white
+#happy, #sad{
+  height: 200px;
+  width: 250px;
+}
+dt{
+  font-family: Arial ;
+  color:rgba(255, 174, 0, 0.877)
+}
+dd{
+  font-size: large;
+}
+ol{
+  font-style: inherit;
+}
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+p:first-letter{
+font-size: 1.5em;
+}
+.about_movie{
+   display: none;
+}
+#hidden_list:hover .about_movie {
+  display: block;
 }
